--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "django-npm"
-version = "1.4.1"
+name = "django-npm-finder"
+version = "1.0.0"
 description = 'A django staticfiles finder that supporting npm/yarn/pnpm'
 authors = [
     "David Nugent <davidn@uniquode.io>",
@@ -8,11 +8,11 @@ authors = [
 ]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/Uniquode/django-npm"
-repository = "https://github.com/Uniquode/django-npm"
-documentation = "https://github.com/Uniquode/django-npm"
+homepage = "https://github.com/deeprave/django-npm-finder"
+repository = "https://github.com/deeprave/django-npm-finder"
+documentation = "https://github.com/deeprave/django-npm-finder"
 packages = [
-    { include = "npm" }
+    { include = "django_npm" }
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -21,19 +21,21 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 keywords=[
     "django",
     "npm",
+    "finder",
     "staticfiles",
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
-Django = ">=3.2"
+Django = ">=4.2"
 
 [tool.poetry.dev-dependencies]
-ruff = "^0.5"
+ruff = "^0.5.2"
 pre-commit = "^3.3.3"
 
 [tool.poetry.group.test.dependencies]
