--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,18 @@
-name: Test and Build CI
+name: Build and Publish Python Package
 
 on:
-  pull_request:
-    branches:
-      - main
+  release:
+    types: [created]
 
 permissions:
   contents: read
+  id-token: write
+
+env:
+  TARGET_PYTHON_VERSION: '3.11'
 
 jobs:
-  build:
+  checks:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,9 +23,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.head_ref }}
 
       - name: Test and Build
         uses: ./.github/actions/test-and-build
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: build and publish package
+        if: matrix.python-version == env.TARGET_PYTHON_VERSION
+        shell: bash
+        run: uv publish --token ${{ secrets.PYPI_TOKEN }}
